@@ -928,6 +928,10 @@ Release 2.7.0 - UNRELEASED
     HDFS-7881. TestHftpFileSystem#testSeek fails in branch-2.
     (Brahma Reddy Battula via aajisaka)
 
+    HDFS-7884. Fix NullPointerException in BlockSender when the generation stamp
+    provided by the client is larger than the one stored in the datanode.
+    (Brahma Reddy Battula via szetszwo)
+
     BREAKDOWN OF HDFS-7584 SUBTASKS AND RELATED JIRAS
 
       HDFS-7720. Quota by Storage Type API, tools and ClientNameNode
